syntax = "proto3";
package stafihub.stafihub.bridge;

import "gogoproto/gogo.proto";

option go_package = "github.com/stafihub/stafihub/x/bridge/types";

message Proposal {
  ProposalContent content = 1 ;
  bool executed = 2 ;
  repeated string voters = 3 ;
}

message ProposalContent {
  string amount = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  string receiver = 2;
}

